# mimi-prompts

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  GAP_FIX_REPORT_2026-07-20.md  GOAL.md  GOAL_GAP_FIX.md  GOAL_UPDATE.md  HANDOFF.md  HANDOFF_2026-07-18.md  HANDOFF_2026-07-19.md  HANDOFF_2026-07-20.md  HANDOFF_2026-07-21.md  HANDOFF_LATEST.md  LICENSE  PROGRESS.md  README.md  SECURITY.md  UX_Analysis_2026-07-18.md  UX_Gap_Analysis_2026-07-19.md  __init__.py  cli.py  core.py  idea1.md  pyproject.toml  seeds.md  seeds.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pages.yml  verify.yml
docs/: install.md  integrations.md  ux-guide.md
docs/hosts/: claude-code.md  codex.md  cursor.md  grok.md  local-agents.md
docs/plans/: 2026-07-18-public-mit-repository-design.md  2026-07-18-workflow-prompt-navigator-design.md  (+3 more)
minipromptlib/: __init__.py  capture.py  classifier.py  cli.py  core.py  harvest.py  models.py  navigator.py  ranking.py  seeds.py  storage.py
scripts/: release_check.py  tabletop_demo.py
site/: app.js  index.html  styles.css
tests/: __init__.py  test_capture.py  test_capture_nudge.py  test_classifier.py  test_cli_json.py  test_cli_ux.py  test_core_regression.py  test_docs.py  test_feedback.py  test_folders.py  test_harvest.py  test_harvest_cli.py  test_integrations.py  test_lifecycle.py  test_navigator.py  test_packaging.py  test_pagination.py  test_ranking.py  test_release_check.py  test_repository_hygiene.py  test_seeds.py  test_site.py  test_storage.py  test_tabletop.py  test_weak_signal.py
(+10 files in other folders)
