[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "minipromptlib"
version = "0.1.0"
description = "Local-first workflow prompt navigation for AI-assisted work"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mini = "minipromptlib.cli:main"

[tool.setuptools]
packages = ["minipromptlib"]
py-modules = ["core"]

[tool.setuptools.package-data]
minipromptlib = ["data/*.md"]
